--- a/NavigationApp/NavigationApp/Base.lproj/Main.storyboard
+++ b/NavigationApp/NavigationApp/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                                     <color key="titleColor" red="0.16304203680000001" green="0.36124388699999999" blue="0.1525914256" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="Ydl-Dw-dNo" kind="show" id="5Lc-UB-bBZ"/>
+                                                    <segue destination="Ydl-Dw-dNo" kind="presentation" id="vbS-Ue-3z1"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -132,19 +132,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="google.com" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MkZ-HE-6Ry">
-                                <rect key="frame" x="53" y="141" width="309" height="256"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" returnKeyType="continue" textContentType="url"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="4LV-H4-w82">
+                                <rect key="frame" x="35" y="123" width="344" height="315"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0tg-H8-TR2">
+                                        <rect key="frame" x="0.0" y="0.0" width="344" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hqc-gh-dfe">
+                                        <rect key="frame" x="0.0" y="35.5" width="344" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbC-o8-CAq">
+                                        <rect key="frame" x="0.0" y="84.5" width="344" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQh-PY-WzF">
+                                        <rect key="frame" x="0.0" y="120" width="344" height="150"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="eUE-Q7-dmC"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j74-ep-7VI">
+                                        <rect key="frame" x="0.0" y="285" width="344" height="30"/>
+                                        <state key="normal" title="Save"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0cL-t7-rKI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4LV-H4-w82" firstAttribute="leading" secondItem="0cL-t7-rKI" secondAttribute="leading" constant="35" id="7Bi-o7-UwI"/>
+                            <constraint firstItem="0cL-t7-rKI" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4LV-H4-w82" secondAttribute="bottom" constant="35" id="TQB-Rb-ZQO"/>
+                            <constraint firstItem="4LV-H4-w82" firstAttribute="top" secondItem="0cL-t7-rKI" secondAttribute="top" constant="35" id="f1E-zR-zWh"/>
+                            <constraint firstItem="0cL-t7-rKI" firstAttribute="trailing" secondItem="4LV-H4-w82" secondAttribute="trailing" constant="35" id="yGB-TI-jSo"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Edit Profile" id="vuW-3h-gc5"/>
+                    <connections>
+                        <outlet property="infoTextFiel" destination="hqc-gh-dfe" id="raB-Mg-jeu"/>
+                        <outlet property="saveButton" destination="j74-ep-7VI" id="JC2-8E-z2H"/>
+                        <outlet property="textField" destination="KQh-PY-WzF" id="C0f-SH-8j6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UcB-VI-A8W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
